objects/RFx_Request__c.object
<CustomObject>
    <label>RFx Request</label>
    <nameField>
        <displayFormat>RFx{00000}</displayFormat>
        <label>RFx Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFx Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Desk__c</fullName>
        <defaultValue>&apos;dealdesk@perkinelmer.com&apos;</defaultValue>
        <label>Deal Desk</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFx_Status__c</fullName>
        <label>RFx Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                    <default>true</default>
                    <label>Initial</label>
                </value>
                <value>
                    <fullName>Awaiting</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Invited to RFx</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Post Submission</fullName>
                </value>
                <value>
                    <fullName>Bid Defense</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>No Bid</fullName>
                </value>
                <value>
                    <fullName>Withdrawn by Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Other__c</fullName>
        <label>Reason Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>RFS</fullName>
                </value>
                <value>
                    <fullName>Other (Please Specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFx_Form_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>US_Value_USD__c</fullName>
        <label>US Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APAC_Value_USD__c</fullName>
        <label>APAC Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Value_USD__c</fullName>
        <label>EMEA Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_Address__c</fullName>
        <label>Company Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_Of_Sites__c</fullName>
        <label>Number Of Sites:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFx_PM_Assigned__c</fullName>
        <label>RFx PM Assigned</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Status__c</fullName>
        <label>Response Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Value_USD__c</fullName>
        <formula>APAC_Value_USD__c + EMEA_Value_USD__c + US_Value_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_assets__c</fullName>
        <label>Number of assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>RFx_Form_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <label>Primary Language</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistance_Needed__c</fullName>
        <label>Assistance Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Desk_Comment__c</fullName>
        <label>Deal Desk Comment</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Assistance__c</fullName>
        <label>Reason Assistance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Categories__c</fullName>
        <label>Service Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Utilization (Asset Genius)</fullName>
                </value>
                <value>
                    <fullName>Expediting (escorting)</fullName>
                </value>
                <value>
                    <fullName>On hand CSE</fullName>
                </value>
                <value>
                    <fullName>On site CSE</fullName>
                </value>
                <value>
                    <fullName>On hand administrator</fullName>
                </value>
                <value>
                    <fullName>On site administrator</fullName>
                </value>
                <value>
                    <fullName>Qualification of instrument</fullName>
                </value>
                <value>
                    <fullName>Computer Systems Validation</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Instrument Qualification</fullName>
                </value>
                <value>
                    <fullName>Regulatory Affairs</fullName>
                </value>
                <value>
                    <fullName>Lab Computing</fullName>
                </value>
                <value>
                    <fullName>Scientific Application Services</fullName>
                </value>
                <value>
                    <fullName>Scientific Data Services</fullName>
                </value>
                <value>
                    <fullName>Instrument Check™</fullName>
                </value>
                <value>
                    <fullName>Instrument Concierge™</fullName>
                </value>
                <value>
                    <fullName>Lab Support</fullName>
                </value>
                <value>
                    <fullName>Scientific Support</fullName>
                </value>
                <value>
                    <fullName>Laboratory Efficiency Consulting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Box_Link_RFx_Details__c</fullName>
        <label>Box Link (RFx Details)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Value_of_opportunity__c</fullName>
        <formula>Opportunity_Name__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value of opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Request_Submitted__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Request Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Response_Submitted__c</fullName>
        <label>Date Response Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_this_a_Global_Account__c</fullName>
        <label>Is this a Global Account?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Locations_please_specify__c</fullName>
        <label>Site Locations (please specify):</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_that_apply_to_this_opportunity__c</fullName>
        <label>Services that apply to this opportunity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Information Services</fullName>
                </value>
                <value>
                    <fullName>Scientific Services</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Core Services</fullName>
                </value>
                <value>
                    <fullName>Instruments</fullName>
                </value>
                <value>
                    <fullName>Consumables</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Request_Type_Other</fullName>
        <active>true</active>
        <description>If Request Type = Other (Please Specify) then prompts a message to the use to enter Reason Other.</description>
        <errorConditionFormula>AND( ISPICKVAL(	Request_Type__c,&apos;Other (Please Specify)&apos;),
ISBLANK(Reason_Other__c))</errorConditionFormula>
        <errorDisplayField>Reason_Other__c</errorDisplayField>
        <errorMessage>Please enter the reason for Other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assistance_Needed_other</fullName>
        <active>true</active>
        <description>If Assistance Needed = Yes then prompts a message to the use to enter Reason Assistance.</description>
        <errorConditionFormula>AND( ISPICKVAL(Assistance_Needed__c,&apos;Yes&apos;),
ISBLANK(Reason_Assistance__c))</errorConditionFormula>
        <errorDisplayField>Reason_Assistance__c</errorDisplayField>
        <errorMessage>Please enter the reason for Assistance needed</errorMessage>
    </validationRules>
</CustomObject>